--- a/Lyceum/static/styles/profile.css
+++ b/Lyceum/static/styles/profile.css
@@ -1076,7 +1076,9 @@ button[type="submit"]:hover > span {
     cursor: pointer;
     text-decoration: none;
     background-color: white;
-    border-bottom: 4px solid #F28500;
+    border: 4px solid #F28500;
+    border-top: none;
+    box-sizing: border-box;
 }
 
 .edit-back h1 {
@@ -1097,18 +1099,21 @@ button[type="submit"]:hover > span {
 
 .password-edit-block {
     position: relative;
-    width: 45%;
-    height: 50%;
+    height: fit-content;
+    width: 100%;
+    height: 100%;
     border-bottom: 4px solid #F28500;
     border-right: 4px solid #F28500;
-    border-left: none;
+    border-left: 4px solid #f28500;
+    overflow: scroll;
+    box-sizing: border-box;
 }
 
 .password-edit-block h1 {
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
     font-size: 56px;
-    margin-bottom: 25px;
+    margin-bottom: 3vh;
     padding: 0.5% 0 0 2%;
 }
 
@@ -1121,8 +1126,9 @@ button[type="submit"]:hover > span {
 .edit-inputs {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 30px;
     padding: 0.5% 0 0 2%;
+    margin-bottom: 40px;
 }
 
 .edit-input-container {
@@ -1814,5 +1820,41 @@ button[type="submit"]:hover > span {
 
     .dashboard-shadow-DE {
         box-shadow: inset 0 -2vw 0 #F28500;
+    }
+}
+
+@media only screen and (max-width: 960px) {
+    .password-edit-block h1 {
+        margin-top: 10px;
+        font-size: 10vw;
+        text-align: center;
+        padding: 0;
+    }
+
+    .edit-inputs {
+        height: 50%;
+        justify-content: space-evenly;
+        padding-left: 0;
+    }
+
+    .edit-input-container {
+        flex-direction: column-reverse;
+        gap: 0;
+        width: 100%;
+        border: 0;
+    }
+
+    .edit-input-container label {
+        text-align: center;
+        font-size: 5vw;
+        font-weight: 600;
+    }
+
+    .edit-input-container input {
+        border-bottom: 4px solid #00baf279;
+    }
+
+    .edit-submit {
+        font-size: 8vw;
     }
 }
