--- a/Lyceum/templates/post/posts.html
+++ b/Lyceum/templates/post/posts.html
@@ -15,8 +15,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.svg' %}" sizes="196x196">
-    <title>Bantopia - Your Posts</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon_package/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon_package/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon_package/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'favicon_package/site.webmanifest' %}">
+    <link rel="mask-icon" href="{% static 'favicon_package/safari-pinned-tab.svg' %}" color="#f28500">
+    <meta name="msapplication-TileColor" content="#f28500">
+    <meta name="theme-color" content="#ffffff">
+    <title>{{ tab_text }} | Bantopia</title>
 </head>
 <body>
     <div class="posts-page">
