--- a/Lyceum/static/styles/comm.css
+++ b/Lyceum/static/styles/comm.css
@@ -242,6 +242,7 @@ sup {
 
 .chatbar-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     border-top: 5px solid black;
     padding: 30px 0 50px 0;
@@ -508,6 +509,26 @@ input:focus:-ms-input-placeholder {
 .chat-bar button {
     background-color: #ffffff;
     cursor: pointer;
+}
+
+.chatbar-puppets {
+    display: flex;
+    align-self: center;
+    margin-top: 15px;
+    width: 90%;
+    gap: 1vw;
+    margin-bottom: 10px;
+}
+
+.puppet {
+    border: none;
+    background-color: white;
+}
+
+.puppet {
+    font-family: 'Poppins', sans-serif;
+    font-size: 24px;
+    font-weight: 700;
 }
 
 @media (hover: hover){
