--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 <body>
     <div class="navbar-container">
         <div class="navbar">
-            <a href="/" class="logo"><img src="{% static 'images/logo.svg' %}" alt="SHOWGAUGE"></a>
+            <a href="/" class="logo"><img src="{% static 'images/favicon.svg' %}" alt="SHOWGAUGE"></a>
             <form method="GET">
                 <input type="text" name="search" id="search" placeholder="Enter a search word..." autocomplete="off">
             </form>
