--- a/templates/profile/create.html
+++ b/templates/profile/create.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </div>
-        <form method="post">
+        <form method="post" spellcheck="false">
             {% csrf_token %}
             <div class="content">
                 <div class="form-area">
