--- a/templates/profile/logIn.html
+++ b/templates/profile/logIn.html
@@ -25,7 +25,7 @@
         <div class="login-title">
             <h1>Log in, or <a href="/create-profile/">create a quick profile</a></h1>
         </div>
-        <form method="POST">
+        <form method="POST" spellcheck="false">
             {% csrf_token %}
             <div class="content">
                 <div class="form-area">
