--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -257,8 +257,9 @@ input:focus:-ms-input-placeholder {
     text-decoration: none;
     cursor: pointer;
     border: 5px solid #f28500;
+    border-right: 10px solid #f28500;
+    border-left: 10px solid #f28500;
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
-    border-radius: 10px;
 }
 
 .trending-post-border {
