--- a/templates/profile/create.html
+++ b/templates/profile/create.html
@@ -77,11 +77,8 @@
                     {% elif message == 'mismatched-passwords' %}
                     <div class="create-support-message"><p>Those passwords don't match. Repeat. Those passwords don't match.</p></div>
                     {% else %}
-                    <div class="login-support-message"><p></p></div>
+                    <div class="create-support-message"><p></p></div>
                     {% endif %}
-                <!--
-                    <div class="create-support-message"><p>Email support@bantopia.com if you need <u>any help whatsoever</u>, we'll try our best.</p></div>
-                -->
                 </div>
             </div>    
             <div class="create-button-container">
