--- a/templates/comms/chat.html
+++ b/templates/comms/chat.html
@@ -94,7 +94,7 @@
             {% endfor %}
         </div>
         {% endif %}
-        <div class="chat">
+        <div class="chat" id="chat">
             <div class="messages" id="messages-container">
                 {% for message in messages %}
                 <div class="message">
@@ -107,6 +107,9 @@
                 </div>
                 {% endfor %}
             </div>
+            <button id="new-messages-alert" class="new-messages-alert hidden">
+                <span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"/></svg><p>There are new messages down below!</p></span>
+            </button>
         </div>
         <div class="chatbar-container">
             <div class="chat-bar">
