--- a/static/styles/comm.css
+++ b/static/styles/comm.css
@@ -1324,6 +1324,10 @@ input:focus:-ms-input-placeholder {
     .text {
         flex-direction: column;
     }
+
+    .new-messages-alert {
+        font-size: 4vw;
+    }
 }
 
 @media only screen and (max-width: 860px) {
