--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,11 @@
     <link rel="mask-icon" href="{% static 'favicon_package/safari-pinned-tab.svg' %}" color="#f28500">
     <meta name="msapplication-TileColor" content="#f28500">
     <meta name="theme-color" content="#ffffff">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Bantopia: The Choice Arena"/>
+    <meta property="og:url" content="https://bantopia.com/">
+    <meta property="og:description" content="Argue with people across the globe regarding any topic you choose!" />
+    <meta property="og:image" content="{% static 'images/Poster.png' %}" />
     <title>{{ tab_text }} | Bantopia</title>
 </head>
 <body>
