Adding Twitter meta tag image.

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
     <meta property="og:url" content="https://bantopia.com/">
     <meta property="og:description" content="Argue with people across the globe regarding any topic you choose!" />
     <meta property="og:image" content="{% static 'images/Poster.png' %}" />
+    <meta property="twitter:image" content="{% static 'images/Poster.png' %}" />
     <title>{{ tab_text }} | Bantopia</title>
 </head>
 <body>
