--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
     <meta property="og:title" content="Bantopia: The Choice Arena"/>
     <meta property="og:url" content="https://bantopia.com/">
     <meta property="og:description" content="Argue with people across the globe regarding any topic you choose!" />
-    <meta property="og:image" content="{% static 'images/Poster-square.png' %}" />
+    <meta property="og:image" content="{% static 'images/Poster.png' %}" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://bantopia.com/" />
     <meta property="twitter:title" content="Bantopia: The Choice Arena" />
