Better meta info.

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Chat and argue with people across the globe regarding any topic you choose, from video-games to bio-medical science. Welcome to Bantopia, the Choice Arena." />
+    <meta name="description" content="Chat and argue with people across the globe regarding any topic you choose, from video-games to bio-medical science, enjoying the Internet in its purest form. From the chillest chats to virtual scream-offs, create a profile and experience it all!" />
     <link rel="stylesheet" href="{% static 'styles/index.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com"><!--Get rid of a bunch of these links-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,12 +22,12 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Bantopia: The Choice Arena"/>
     <meta property="og:url" content="https://bantopia.com/">
-    <meta property="og:description" content="Argue with people across the globe regarding any topic you choose!" />
+    <meta property="og:description" content="Argue with people across the globe regarding any topic you choose, from video-games to bio-medical science, enjoying the Internet in its purest form. From the chillest chats to virtual scream-offs, create a profile and experience it all!" />
     <meta property="og:image" content="{% static 'images/Poster.png' %}" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://bantopia.com/" />
     <meta property="twitter:title" content="Bantopia: The Choice Arena" />
-    <meta property="twitter:description" content="Argue with people across the globe regarding any topic you choose! Welcome to Bantopia: The Choice Arena!" />
+    <meta property="twitter:description" content="Argue with people across the globe regarding any topic you choose, from video-games to bio-medical science, enjoying the Internet in its purest form. From the chillest chats to virtual scream-offs, create a profile and experience it all!" />
     <meta property="twitter:image" content="{% static 'images/Poster.png' %}" />
     <title>{{ tab_text }} | Bantopia</title>
 </head>
