--- a/templates/comms/chat.html
+++ b/templates/comms/chat.html
@@ -17,6 +17,16 @@
     <link rel="mask-icon" href="{% static 'favicon_package/safari-pinned-tab.svg' %}" color="#f28500">
     <meta name="msapplication-TileColor" content="#f28500">
     <meta name="theme-color" content="#ffffff">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Bantopia: The Choice Arena"/>
+    <meta property="og:url" content="https://bantopia.com/">
+    <meta property="og:description" content="Argue with people across the globe regarding any topic you choose, from video-games to bio-medical science, enjoying the Internet in its purest form. From the chillest chats to virtual scream-offs, create a profile and experience it all!" />
+    <meta property="og:image" content="{% static 'images/Poster.png' %}" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://bantopia.com/" />
+    <meta property="twitter:title" content="Bantopia: The Choice Arena" />
+    <meta property="twitter:description" content="Argue with people across the globe regarding any topic you choose, from video-games to bio-medical science, enjoying the Internet in its purest form. From the chillest chats to virtual scream-offs, create a profile and experience it all!" />
+    <meta property="twitter:image" content="{% static 'images/Poster.png' %}" />
     <title>Chat | {{post.post_title}} | Bantopia</title>
 </head>
 <body>
