--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -65,24 +65,69 @@
                     <div class="dashboard-info-menu">
                         <li id="dashboard-commands-tab">Commands</li>
                         <li id="dashboard-rules-tab">Rules</li>
-                        <li id="dashboard-tips-tab">Tips</li>
+                        <li id="dashboard-partners-tab">Partners</li>
                     </div>
-                    <div id="dashboard-tips" class="hidden">
-                        <!--
-                        <div class="dashboard-tip-group">
-                            <div class="dashboard-tip-title">
-                                <h2><span>Tip #1: Can I get your number?</span></h2>
+                    <div id="dashboard-partners" class="hidden">
+                        <div class="dashboard-partner-main-title"><h1>If you like Bantopia check out these servers and websites!</h1></div>
+                        <div class="dashboard-partner-group">
+                            <div class="dashboard-partner-title">
+                                <h2><span class="color-RE">{</span>American Chill Spot<span class="color-RE">}</span></h2>
                             </div>
-                            <div class="dashboard-tip">
-                                <p>If you're engaged in a lengthy dispute with someone, or would like to talk for any other reason, just exchange phone numbers and call. Not only is it very sophisticated, but it's a safe and effective way to meet new people and make interesting connections.</p>
+                            <div class="dashboard-partner">
+                                <p>We are a discord for Conservatives made by Conservatives a chill spot for supporters of Free Speech, The 2nd amendment, USA and Capitalism. a laid back community with a right wing lean we are welcoming to all but expect a debate if you're on the other side. Come hang out, kick your feet up and join The American Chill Spot.<br><br>
+                                   <a href="https://discord.gg/75ywtZ3K8f" class="dashboard-partner-link">https://discord.gg/75ywtZ3K8f</a>
+                                   <br>
+                                   <br>
+                                   What we offer:<br>
+                                   | A chill spot for likeminded individuals <br>
+                                   | A chill staff team here to help<br>
+                                   | Over 200 emotes, and counting....<br>
+                                   | Debate channel to settle disagreements<br>
+                                   | Religion channel for the faithful <br>
+                                   | Voice & Music channels<br>
+                                   | And many more dedicated channels. <br>
+                                   </p>
                             </div>
-                        </div>--->
-                        <div class="dashboard-tip-group">
-                            <div class="dashboard-tip-title">
-                                <h2><span>Tip #1: Straight to the Top.</span></h2>
+                        </div>
+                        <div class="dashboard-partner-group">
+                            <div class="dashboard-partner-title">
+                                <h2><span class="color-BL">{</span>The Political Cathedral<span class="color-BL">}</span></h2>
                             </div>
-                            <div class="dashboard-tip">
-                                <p>If you have any suggestions or thoughts, our CEO's email address is skrillfalconblast@icloud.com, he tries his best to read every email and usually responds (bless his soul).</p>
+                            <div class="dashboard-partner">
+                                <p>
+                                Are you someone who enjoys thoughtful political debate with others who share your thirst for knowledge?<br>
+                                🏛️   Then join the growing community at the Political Cathedral.🏛️<br>
+                                🗣️  an interactive place to discuss the issues that matter most with a diverse group of like-minded individuals.🗣️<br>
+                                🎉  In addition to open debate, they offer reading clubs, guest speakers and regular events 📚 focused on complex policy topics.<br><br>
+                                Join the Political Cathedral today - a new kind of digital public square for engaging in civil political debate<br>
+                                <a href="https://discord.gg/6ENtKsrsEr" class="dashboard-partner-link">https://discord.gg/6ENtKsrsEr</a>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="dashboard-partner-group">
+                            <div class="dashboard-partner-title">
+                                <h2><span class="color-RE">{</span>The Project Patriot<span class="color-BL">}</span></h2>
+                            </div>
+                            <div class="dashboard-partner">
+                                <p>
+                                    We are the official Discord of TheProjectPatriot.com, a conservative news site dedicated to bringing you the truth & only the truth for the biggest stories affecting politics & culture each week.<br>
+                                    <br>
+                                    Who are we:<br>
+                                    <br>
+                                    1. Our members are mostly conservatives, some libertarians & centrists with very few left of centre. <br>
+                                    2. We encourage diversity of thought & opinion.<br>
+                                    3. Truth is important to us, 2nd only to God!<br>
+                                    4. We follow ToS & Community Guidelines in order to protect our community space.<br>
+                                    5. Debate is most welcome but it must be clean & friendly. Slurs or harrassment will not be tolerated.<br>
+                                    6. We are looking for writers & contributors for articles, proofreading & help with word of mouth on social media.<br>
+                                    7. We want you to be respectful, share ideas and have fun!<br>
+                                    <br>
+                                    When you join, please read our rules then check your DMs to verify & pop over to General for a chat.<br>
+                                    <br>
+                                    note, if you block DMs, verification becomes a manual process. Please tag an Admin to help<br>
+                                    <br>
+                                    <a class="dashboard-partner-link" href="https://discord.gg/drBx5bGtGx">https://discord.gg/drBx5bGtGx</a>
+                                </p>
                             </div>
                         </div>
                     </div>
