--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -114,7 +114,7 @@
                                     <br>
                                     Who are we:<br>
                                     <br>
-                                    1. Our members are mostly conservatives, some libertarians & centrists with very few left of centre. <br>
+                                    1. Our members are mostly conservatives, some libertarians & centrists with very few left of center. <br>
                                     2. We encourage diversity of thought & opinion.<br>
                                     3. Truth is important to us, 2nd only to God!<br>
                                     4. We follow ToS & Community Guidelines in order to protect our community space.<br>
