--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
                 <a id="controversial" href="/?sort=controversial"><span>Controversial</span></a>                
                 <a href="/post/write" class="post-link"><span>#Post</span></a>
                 {% if user.is_authenticated %}
-                <a href="/{{ user.display_name }}/dashboard" class="dashboard-link"><span><span class="dashboard-your">Your<br></span>Dashboard</span></a>
+                <a href="/{{ user.display_name }}/dashboard/" class="dashboard-link"><span><span class="dashboard-your">Your<br></span>Dashboard</span></a>
                 {% else %}
                 <div class="account-links">
                     <a href="login/"><span>Log in</span></a>
